--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,18 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+collections:
+  portfolio:
+    output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: post
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
