--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Yann Herklotz
 email: ymherklotz@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Portfolio of interesting projects that I have been working on since
   starting university.
 baseurl: "" 
