--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,11 @@ url: "www.yannherklotz.com"
 
 # User settings
 username: Yann Herklotz
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: >
+  Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a
+  bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters
+  pour-over snackwave you probably haven't heard of them small batch. Cornhole
+  mustache man bun letterpress echo park VHS.
 user_title: Software Developer
 email: ymherklotz@gmail.com
 twitter_username: ymherklotz
@@ -15,7 +19,7 @@ linkedin_username: yannherklotz
 
 # Google-analytics
 google-analytics:
-  id: ""
+  id: "UA-120899424-1"
 
 exclude:
   - package.json
