Fixing config yaml file for twitter

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: www.yannherklotz.com
 username: Yann Herklotz
 user_title: Software Developer
 email: ymherklotz@gmail.com
-twitter_username: \@ymherklotz
+twitter_username: ymherklotz
 github_username: ymherklotz
 linkedin_username: yannherklotz
 
