--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: Yann Herklotz
 description: >-
   Game engine C++ developer, with a passion for functional programming
-url: https://www.yannherklotz.com/
+url: https://ymherklotz.github.io/
 baseurl:
 # url: "localhost:3000"
 
 # User settings
 username: Yann Herklotz
 user_title: Software Developer
-email: ymherklotz@gmail.com
+email: yann@ymhg.org
 twitter_username: ymherklotz
 github_username: ymherklotz
 linkedin_username: yannherklotz
